# hwido-libro

./: .gitignore  Cargo.toml  READMD.md  README.md  deno.json  import_map.json  plan.md  tasks.md
.cursor/rules/: hd-rules.mdc
.github/workflows/: ci.yml
data/assets/: 1.md  3.md  test_book.md
libro-cli/: Cargo.toml
libro-cli/src/: lib.rs  main.rs
libro-cli/src/cli/: mod.rs
libro-cli/src/cli/commands/: add.rs  browse.rs  mod.rs  report.rs  review.rs
libro-cli/src/commands/: add.rs  authors.rs  books.rs  browse.rs  brs.rs  edit_review.rs  mod.rs  report.rs  review.rs  reviews.rs
libro-cli/src/lib/: db.rs  db_operations.rs  errors.rs  mod.rs  models.rs
libro-cli/src/tui/: app.rs  events.rs  input.rs  mod.rs  state.rs
libro-cli/src/tui/handlers/: mod.rs
libro-cli/src/tui/ui/: add_book.rs  book_list.rs  edit_book.rs  help.rs  mod.rs  report.rs  review.rs  search.rs
libro-cli/src/utils/: database.rs  date.rs  error_handler.rs  input.rs  mod.rs  output.rs
libro-cli/tests/: cli_parse.rs  db_operations.rs
src/: db.ts  main.ts
src/commands/: add.ts  edit-review.ts  import-markdown.ts  index.ts  report.ts  review.ts  show.ts
src/lib/: db-operations.ts
src/utils/: Table.ts  banner.ts  barChart.ts  colors.ts  editor.ts  errors.ts  fp.ts  fs.ts  index.ts  inspect_db.ts  markdown.ts
