[package]
name = "libro-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap      = { version = "4.2", features = ["derive"] }
rusqlite  = "0.29"
chrono    = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde     = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console   = "0.15"
tabled    = "0.15"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
